dark mode fix and many small adjustments to html and css to fix errors and formatting

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,10 +24,10 @@ header {
     top: 0;
     left: 0;
     grid-column: 2 / 3;
-    grid-row:1 / 2;
-    width:100%;
-    min-width:200px;
-    z-index:3;
+    grid-row: 1 / 2;
+    width: 100%;
+    min-width: 200px;
+    z-index: 3;
     background-color: #f0f0f0;
 }
 
@@ -49,20 +49,19 @@ h1:before {
     top: 0;
     left: 0;
     grid-column: 1 / 2;
-    grid-row: 1 / 2;
+    grid-row: 1 / 3;
     z-index: 99;
     background-color: #fff;
 }
 
 nav {
-    padding: 1em;
+    padding: 0.5em;
 }
 
 nav h2 {
     font-family: var(--pixelify);
     font-size: 1.2em;
     text-align: center;
-    margin-bottom: 0.5em;
 }
 
 nav h3 {
@@ -76,7 +75,7 @@ nav h3::before {
     animation: blink 0.8s infinite alternate;
     color: rgb(220, 38, 38);
     font-weight: bold;
-    margin: 0 0 0 5px;
+    margin: 0 5px 0 0;
 }
 
 @keyframes blink {
@@ -90,7 +89,10 @@ nav h3::before {
 
 nav ul {
     list-style: none;
-    padding: 0;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-direction: column;
 }
 
 nav ul li {
@@ -131,7 +133,6 @@ nav input:checked + label::before {
     outline: none;
     width: 100%;
     cursor: pointer;
-    background-color: #ffffff;
     border-bottom: 1px solid #ddd;
     transition: background-color 0.3s;
     position: relative;
@@ -143,7 +144,7 @@ nav input:checked + label::before {
     position: absolute;
     right: 10px;
     top: 50%;
-    transform: translateY(-50%);
+    transform: translateY(-50%) rotate(0deg);
     transition: transform 0.3s;
 }
 
@@ -157,7 +158,6 @@ nav input:checked + label::before {
     overflow: hidden;
     transition: max-height 0.3s ease-out;
     padding: 0 10px;
-    background-color: #f9f9f9;
     border-bottom: 1px solid #ddd;
 }
 
@@ -168,7 +168,7 @@ nav input:checked + label::before {
 /* Main content styling */
 #mainBody {
     grid-column: 2 / 3;
-    grid-row: 2 / 3;
+    grid-row: 2 / 4;
     z-index: 1;
 }
 
@@ -191,7 +191,7 @@ nav input:checked + label::before {
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
-    transition: transform 0.3s, background-color 0.3s;
+    transition: transform 0.3s;
 }
 
 #timers div:hover {
@@ -229,6 +229,39 @@ nav input:checked + label::before {
     color: #fff;
 }
 
+/* Dark Mode */
+body.dark-mode {
+    background-color: rgb(34, 31, 46);
+}
+
+#header.dark-mode {
+    background-color: rgb(34, 31, 46);
+}
+
+#asideBody.dark-mode {
+    background-color: rgb(34, 31, 46);
+}
+
+#darkModeFilter.dark-mode {
+    background-color: rgb(34, 31, 46);
+}
+
+#filterButton.dark-mode {
+    color: rgb(235, 115, 104);
+}
+
+#darkModeAvailability.dark-mode {
+    color: rgb(235, 115, 104);
+}
+
+#darkModePlayers.dark-mode {
+    color: rgb(235, 115, 104);
+}
+
+#darkModeGenres.dark-mode {
+    color: rgb(235, 115, 104);
+}
+
 /* Media Queries */
 @media screen and (max-width: 768px) {
     body {
@@ -254,14 +287,6 @@ nav input:checked + label::before {
 
     #asideBody {
         position: relative;
-        grid-column: 1 / 2;
-        grid-row: 1 / 2;
-    }
-
-    #mainBody {
-        grid-column: 1 / 2;
-        grid-row: 2 / 3;
-    }
 }
 
 /* Style for Back to Top Button */
